@startuml
skinparam monochrome true
skinparam shadowing false
skinparam classAttributeIconSize 0
skinparam nodesep 50
skinparam ranksep 50
skinparam defaultFontName Arial
hide circle

skinparam class {
    BackgroundColor white
    BorderColor black
}

class Utilisateur {
  + id : Integer
  + nom : String
  + prenom : String
  + email : String
  + motDePasse : String
  + telephone : String
  + role : Enum
  + createdAt : Date
  + seConnecter() : Boolean
  + sInscrire() : void
  + modifierProfil() : void
}

class Client {
  + pointsFidelite : Integer
  + rechercherHotel() : List
  + reserverChambre() : Reservation
  + annulerReservation() : void
  + consulterHistorique() : List
  + soumettreAvis() : void
  + signalerIncident() : void
}

class Admin {
  + gererHotels() : void
  + gererChambres() : void
  + gererUtilisateurs() : void
  + exporterPaiements() : void
}

class Receptionniste {
  + confirmerReservation() : void
  + effectuerCheckIn() : void
  + effectuerCheckOut() : void
  + traiterIncidents() : void
}

class ResponsableMarketing {
  + gererPromotions() : void
  + creerCodePromo() : String
  + envoyerOffresEmail() : void
  + modererAvis() : void
}

Utilisateur <|-- Client
Utilisateur <|-- Admin
Utilisateur <|-- Receptionniste
Utilisateur <|-- ResponsableMarketing

class Hotel {
  + id : Integer
  + nom : String
  + description : String
  + adresse : String
  + ville : String
  + statut : Boolean
  + afficherDisponibilites() : List
  + calculerNoteMoyenne() : Float
}

class Chambre {
  + id : Integer
  + numero : String
  + type : String
  + prix : Float
  + capacite : Integer
  + statut : Enum
  + verifierDisponibilite() : Boolean
  + modifierStatut() : void
}

class Service {
  + id : Integer
  + nom : String
  + description : String
  + prix : Float
}

class Reservation {
  + id : Integer
  + dateArrivee : Date
  + dateDepart : Date
  + statut : Enum
  + montantTotal : Float
  + requetesSpeciales : String
  + confirmer() : void
  + annuler() : void
  + checkIn() : void
}

class Paiement {
  + id : Integer
  + montant : Float
  + methode : String
  + statut : Enum
  + transactionId : String
  + processerStripe() : Boolean
  + genererFacture() : void
}

class Avis {
  + id : Integer
  + note : Integer
  + commentaire : String
  + statut : Enum
  + reponse : String
  + publier() : void
  + moderer() : void
}

class Promotion {
  + id : Integer
  + codePromo : String
  + remisePourcentage : Float
  + dateDebut : Date
  + dateFin : Date
  + estActive : Boolean
  + appliquer() : Float
}

class Notification {
  + id : Integer
  + message : String
  + estLue : Boolean
  + marquerLue() : void
}

class Incident {
  + id : Integer
  + description : String
  + statut : Enum
  + mettreAJourStatut() : void
}

class LoyaltyPoint {
  + id : Integer
  + points : Integer
  + typeOperation : String
  + echangerPoints() : void
}

' Relations
Client "1" -- "0..*" Reservation : effectue >
Client "1" -- "0..*" Avis : rédige >
Client "1" -- "0..*" Notification : reçoit >
Client "1" -- "0..*" Incident : signale >
Client "1" -- "0..*" LoyaltyPoint : cumule >

Admin "1" -- "0..*" Hotel : gère >
Receptionniste "1" -- "0..*" Reservation : gère >
Receptionniste "1" -- "0..*" Incident : traite >
ResponsableMarketing "1" -- "0..*" Promotion : crée >
ResponsableMarketing "1" -- "0..*" Avis : modère >

Hotel "1" *-- "1..*" Chambre : contient >
Hotel "1" *-- "0..*" Service : propose >
Hotel "1" -- "0..*" Avis : concerne <

Reservation "0..*" -- "1" Chambre : réserve >
Reservation "1" -- "1" Paiement : génère >
Reservation "0..*" -- "0..1" Promotion : utilise >

@enduml